# TLP-switch

./: .gitignore  CMakeLists.txt  README.md  cli.c  main.c  tlp-switch
configs/: README.md  tlp.balanced.conf  tlp.conf  tlp.conf.default  tlp.conf.extreme  tlp.extreme-hybrid.conf  tlp.extreme.conf  tlp.performance.conf
